[gd_scene load_steps=9 format=3 uid="uid://b2pwwca6o5eor"]

[ext_resource type="Script" uid="uid://cow77chvtq5mk" path="res://scenes/weapons/projectile/arrow_projectile.gd" id="1_qe6vt"]
[ext_resource type="Texture2D" uid="uid://ivus5a5jw87w" path="res://assets/sprites/arrows.png" id="2_e0jf0"]
[ext_resource type="AudioStream" uid="uid://drs300oxaishw" path="res://assets/sounds/stone-dropping-6843.mp3" id="3_e0jf0"]
[ext_resource type="AudioStream" uid="uid://coccledt0bjue" path="res://assets/sounds/hit-rock-02-266304.mp3" id="4_kukug"]
[ext_resource type="PackedScene" uid="uid://gfrtgg6qugt3" path="res://scenes/damage/projectile_injury_zone.tscn" id="5_fbpvq"]

[sub_resource type="AtlasTexture" id="AtlasTexture_kukug"]
atlas = ExtResource("2_e0jf0")
region = Rect2(8, 111, 26, 86)

[sub_resource type="AtlasTexture" id="AtlasTexture_fbpvq"]
atlas = ExtResource("2_e0jf0")
region = Rect2(108, 112, 26, 86)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qe6vt"]
size = Vector2(8, 2)

[node name="ArrowProjectile" type="Node2D" groups=["Projectile"]]
script = ExtResource("1_qe6vt")
normal_arrow_texture = SubResource("AtlasTexture_kukug")
poisoned_arrow_texture = SubResource("AtlasTexture_fbpvq")
metadata/_custom_type_script = "uid://crobb4gye80bd"

[node name="RigidBody2D" type="RigidBody2D" parent="."]
unique_name_in_owner = true
collision_layer = 16
collision_mask = 23
mass = 0.2

[node name="Sprite2D" type="Sprite2D" parent="RigidBody2D"]
unique_name_in_owner = true
scale = Vector2(0.333, 0.333)
texture = ExtResource("2_e0jf0")
region_enabled = true
region_rect = Rect2(0, 106, 38, 94)

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="RigidBody2D"]
unique_name_in_owner = true
stream = ExtResource("3_e0jf0")

[node name="AudioStreamPlayer2D2" type="AudioStreamPlayer2D" parent="RigidBody2D"]
unique_name_in_owner = true
stream = ExtResource("4_kukug")

[node name="ProjectileInjuryZone" parent="RigidBody2D" instance=ExtResource("5_fbpvq")]
unique_name_in_owner = true
position = Vector2(-1, 0)
collision_mask = 47

[node name="InjuryCollisionPolygon2D" type="CollisionPolygon2D" parent="RigidBody2D/ProjectileInjuryZone"]
position = Vector2(1, 0)
polygon = PackedVector2Array(2, -1, 1, 0, 2, 1, 3, 1, 4, 0, 3, -1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="RigidBody2D"]
shape = SubResource("RectangleShape2D_qe6vt")

[connection signal="body_entered" from="RigidBody2D/ProjectileInjuryZone" to="." method="_on_projectile_injury_zone_body_entered"]
[connection signal="projectile_injury_zone_hurt_someone" from="RigidBody2D/ProjectileInjuryZone" to="." method="_on_projectile_injury_zone_projectile_injury_zone_hurt_someone"]
